--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,6 +19,12 @@ android {
         consumerProguardFiles "consumer-rules.pro"
         //方法超出最大数量解决方案
         multiDexEnabled true
+
+        ndk {
+            //armeabi-v7a=32位系统(体积小，功能受限)    arm64-v8a=64位系统（体积大，功能不受限）
+            abiFilters "arm64-v8a"
+//            abiFilters "armeabi-v7a"
+        }
     }
 
     compileOptions {
@@ -34,6 +40,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 
 }
 
