--- a/pet/src/main/AndroidManifest.xml
+++ b/pet/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/app_logo_round"
         android:supportsRtl="true"
         android:name=".App"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.LovePet">
         <activity
             android:name=".main.MainActivity"
